k8s/applications/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
spec:
  selector:
    matchLabels:
      app: homeassistant
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: homeassistant
          image: homeassistant/home-assistant:2026.5.4
          ports:
            - name: ingress
              containerPort: 8123
          volumeMounts:
            - name: homeassistant
              mountPath: /config
      volumes:
        - name: homeassistant
          persistentVolumeClaim:
            claimName: homeassistant
      resources:
        limits:
          memory: 1Gi
        requests:
          cpu: 10m
          memory: 1Gi
