k8s/applications/homeassistant/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant
subsets:
  - addresses:
      - ip: 192.168.1.200
    ports:
      - name: http
        port: 8123
