k8s/applications/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-lb
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.81
spec:
  type: LoadBalancer
  selector:
    app: homeassistant
  ports:
    - name: ingress
      port: 8123
      targetPort: ingress
